--- a/hello.html
+++ b/hello.html
@@ -2,13 +2,10 @@
 <html lang= "en">
     <head>
         <title>Hello!</title>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-        "
-    </head>
+   </head>
     <body>
-        Hello,world!
-        <div class="alert alert-primary" role="alert">
-            Alert! Alert! Alert!
-          </div>
+        <h1>Welcome to my website!</h1>
+            <h2>Hello</h2>
+        Hello, world!
     </body>
 </html>
